apps/clamav-mirror/clamav/clamav.yaml
####
# Service
####
apiVersion: v1
kind: Service
metadata:
  name: clamav-mirror
  namespace: clamav-mirror
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
  labels:
    app: clamav-mirror
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: None
  selector:
    app.kubernetes.io/instance: clamav-mirror
