apps/clamav-mirror/clamav/sbox-intsvc-ingress.yaml
---
#
# Ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clamav-mirror
  namespace: clamav-mirror
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: clamav-mirror.sandbox.platform.hmcts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clamav-mirror
                port:
                  number: 8080
